--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ text-align: center;
 padding: 10px;
 border: 1px solid black;
 background-color: black; 
-width: 15%;
+width: 250px;
 margin: 3%;
 }
 .card img{
