--- a/style.css
+++ b/style.css
@@ -60,8 +60,9 @@ span{
 }
 .home p{
     float: right;
-    margin-left: 600px;
-    margin-top: 400px;
+    text-align: center;
+    margin-left: 35%;
+    margin-top: 20%;
     margin-right: 20px;
     font-size: 40px;
     border: 3px solid black;
@@ -121,8 +122,8 @@ text-align: center;
 padding: 10px;
 border: 1px solid black;
 background-color: black; 
-width: 250px;
-margin: 3%;
+width: 225px;
+margin: 3.5%;
 }
 .card img{
 height: 250px;
@@ -132,7 +133,7 @@ margin-left: 8%;
 }
 figcaption{
 color: white;
-font-size: 30px;
+font-size: 25px;
 }
 .image img{
 height: 600px;
