--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 .part1{
     margin-left: 10%;
     margin-right: 10%;
@@ -124,6 +127,7 @@ border: 1px solid black;
 background-color: black; 
 width: 225px;
 margin: 3.5%;
+
 }
 .card img{
 height: 250px;
