width changed for cast

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ span{
 .home p{
     float: right;
     text-align: center;
-    margin-left: 35%;
+    margin-left: 31%;
     margin-top: 20%;
     margin-right: 20px;
     font-size: 40px;
@@ -126,14 +126,17 @@ padding: 10px;
 border: 1px solid black;
 background-color: black; 
 width: 225px;
-margin: 3.5%;
+margin: 50px;
 
 }
 .card img{
 height: 250px;
 }
 .cast{
-margin-left: 8%;
+    margin-left: 6%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    /* margin-right: auto;    */
 }
 figcaption{
 color: white;
